--- a/assets/css/main-premium.css
+++ b/assets/css/main-premium.css
@@ -1113,11 +1113,11 @@ input, select, textarea {
    -webkit-transform: translateX(-50%) translateY(-50%);
    transform: translateX(-50%) translateY(-50%);
 }
-@media (min-width: 62em) {
+/*@media (min-width: 62em) {
    #bg {
       display:block;
    }
-}
+}*/
 
 /* Wrapper */
 
