--- a/assets/css/main-premium.css
+++ b/assets/css/main-premium.css
@@ -1101,7 +1101,7 @@ input, select, textarea {
 /* BG */
 
 	#bg {
-   display:none;
+   display:block;
    position: fixed;
    top: 50%;
    left: 50%;
