--- a/assets/css/main-premium.css
+++ b/assets/css/main-premium.css
@@ -1101,7 +1101,7 @@ input, select, textarea {
 /* BG */
 
 	#bg {
-   display:none;
+   display:block;
    position: fixed;
    top: 50%;
    left: 50%;
@@ -1117,7 +1117,7 @@ input, select, textarea {
 /* Media Query for Mobile Devices */
 @media (max-width: 30em) {
    #bg {
-   display:none;
+   display:block;
    position: fixed;
    top: 50%;
    left: 70%;
@@ -1134,7 +1134,7 @@ input, select, textarea {
 /* Media Query for low resolution  Tablets, Ipads */
 @media (min-width: 30em) and (max-width: 50em) {
    #bg {
-   display:none;
+   display:block;
    position: fixed;
    top: 50%;
    left: 50%;
@@ -1151,7 +1151,7 @@ input, select, textarea {
 /* Media Query for Tablets Ipads portrait mode */
 @media (min-width: 48em) and (max-width: 64em) {
    #bg {
-   display:none;
+   display:block;
    position: fixed;
    top: 50%;
    left: 50%;
