--- a/assets/css/main-premium.css
+++ b/assets/css/main-premium.css
@@ -1118,9 +1118,9 @@ input, select, textarea {
 @media (max-width: 30em) {
    #bg {
    display:block;
-   position: static;
-   top: 50%;
-   left: 50%;
+   position: fixed;
+   top: 20%;
+   left: 80%;
    min-width: 100%;
    min-height: 100%;
    width: auto;
