--- a/assets/css/main-premium.css
+++ b/assets/css/main-premium.css
@@ -1115,7 +1115,7 @@ input, select, textarea {
 }
 
 /* Media Query for Mobile Devices */
-@media (max-width: 30em) {
+@media (max-width: 29em) {
    #bg {
    display:block;
    position: fixed;
@@ -1123,7 +1123,7 @@ input, select, textarea {
    left: 95%;
    min-width: 100%;
    min-height: 100%;
-   width: auto;
+   width: 29em;
    height: auto;
    z-index: 50;
    -webkit-transform: translateX(-50%) translateY(-50%);
