--- a/assets/css/main-premium.css
+++ b/assets/css/main-premium.css
@@ -1102,9 +1102,16 @@ input, select, textarea {
 
 	#bg {
    display:block;
-   top: 0;
-   left: 0;
+   position: fixed;
+   top: 50%;
+   left: 50%;
+   min-width: 50%;
+   min-height: 100%;
+   width: auto;
+   height: auto;
    z-index: -100;
+   -webkit-transform: translateX(-50%) translateY(-50%);
+   transform: translateX(-50%) translateY(-50%);
 }
 
 /* Media Query for Mobile Devices */
@@ -1112,8 +1119,8 @@ input, select, textarea {
    #bg {
    display:block;
    position: fixed;
-   top: 50%;
-   left: 80%;
+   top: 2%;
+   left: 98%;
    min-width: 100%;
    min-height: 100%;
    width: auto;
