--- a/assets/css/main-premium.css
+++ b/assets/css/main-premium.css
@@ -1104,7 +1104,7 @@ input, select, textarea {
    display:block;
    position: fixed;
    top: 50%;
-   left: 120%;
+   left: 50%;
    min-width: 100%;
    min-height: 100%;
    width: 100%;
@@ -1131,24 +1131,7 @@ input, select, textarea {
    }
 }
 
-/* Media Query for low resolution  Tablets, Ipads */
-@media (min-width: 30em) and (max-width: 50em) {
-   #bg {
-   display:block;
-   position: fixed;
-   top: 10%;
-   left: 150%;
-   min-width: 100%;
-   min-height: 100%;
-   width: auto;
-   height: auto;
-   z-index: -100;
-   -webkit-transform: translateX(-50%) translateY(-50%);
-   transform: translateX(-50%) translateY(-50%);
-   }
-}
-
-/* Media Query for Tablets Ipads portrait mode */
+/* Media Query for portrait tablets, portrait iPad */
 @media (min-width:641px) {
    #bg {
    display:block;
@@ -1165,7 +1148,7 @@ input, select, textarea {
    }
 }
 
-/* Media Query for Tablets Ipads landscape mode */
+/* Media Query for tablet, landscape iPad, lo-res laptops ands desktops*/
 @media (min-width:961px) {
    #bg {
    display:block;
