--- a/assets/css/main-premium.css
+++ b/assets/css/main-premium.css
@@ -1101,10 +1101,10 @@ input, select, textarea {
 /* BG */
 
 	#bg {
-   display:inherit;
+   display:block;
    position: fixed;
    top: 50%;
-   left: 50%;
+   left: 70%;
    min-width: 100%;
    min-height: 100%;
    width: 100%;
