--- a/assets/css/main-premium.css
+++ b/assets/css/main-premium.css
@@ -1104,7 +1104,7 @@ input, select, textarea {
    display:block;
    position: fixed;
    top: 30%;
-   left: 200%;
+   right: 50%;
    min-width: 100%;
    min-height: 100%;
    width: 100%;
