--- a/assets/css/main-premium.css
+++ b/assets/css/main-premium.css
@@ -1113,6 +1113,36 @@ input, select, textarea {
    transform: translateX(-50%) translateY(-50%);
 }
 
+@media (min-width:1025px) {
+	#bg{
+		   position: absolute;
+   top: 50%;
+   left: 50%;
+   min-width: 100%;
+   min-height: 100%;
+   width: auto;
+   height: auto;
+   z-index: -100;
+   -webkit-transform: translateX(-50%) translateY(-50%);
+   transform: translateX(-50%) translateY(-50%);
+	}
+}
+
+@media (min-width:1281px) {
+	#bg{
+		   position: absolute;
+   top: 50%;
+   left: 50%;
+   min-width: 100%;
+   min-height: 100%;
+   width: auto;
+   height: auto;
+   z-index: -100;
+   -webkit-transform: translateX(-50%) translateY(-50%);
+   transform: translateX(-50%) translateY(-50%);
+	}
+}
+
 /* Media Query for Mobile Devices */
 @media (min-width:320px) {
    #bg {
