--- a/assets/css/main-premium.css
+++ b/assets/css/main-premium.css
@@ -1101,46 +1101,9 @@ input, select, textarea {
 /* BG */
 
 	#bg {
-		fill: cover;
-   top: 50%;
-   left: 50%;
-   min-width: 100%;
-   min-height: 100%;
-   width: auto;
-   height: auto;
-   z-index: -100;
+   object-fit: fill;
    -webkit-transform: translateX(-50%) translateY(-50%);
    transform: translateX(-50%) translateY(-50%);
-}
-
-@media (min-width:1025px) {
-	#bg{
-	fill: cover;
-   top: 50%;
-   left: 50%;
-   min-width: 100%;
-   min-height: 100%;
-   width: auto;
-   height: auto;
-   z-index: -100;
-   -webkit-transform: translateX(-50%) translateY(-50%);
-   transform: translateX(-50%) translateY(-50%);
-	}
-}
-
-@media (min-width:1281px) {
-	#bg{
-		fill: cover;
-   top: 50%;
-   left: 50%;
-   min-width: 100%;
-   min-height: 100%;
-   width: auto;
-   height: auto;
-   z-index: -100;
-   -webkit-transform: translateX(-50%) translateY(-50%);
-   transform: translateX(-50%) translateY(-50%);
-	}
 }
 
 /* Media Query for Mobile Devices */
