--- a/assets/css/main-premium.css
+++ b/assets/css/main-premium.css
@@ -1101,10 +1101,11 @@ input, select, textarea {
 /* BG */
 
 	#bg {
-   object-fit: fill;
-   -webkit-transform: translateX(-50%) translateY(-50%);
-   transform: translateX(-50%) translateY(-50%);
-}
+   height: 100vh;
+        width: 100%;
+        object-fit: fill;
+        position: absolute;
+	}
 
 /* Media Query for Mobile Devices */
 @media (min-width:320px) {
