--- a/assets/css/main-premium.css
+++ b/assets/css/main-premium.css
@@ -1107,6 +1107,23 @@ input, select, textarea {
         position: absolute;
 	}
 
+@media (min-width:1025px) {
+	#bg {
+height: 100vh;
+        width: 100%;
+        object-fit: fill;
+        position: absolute;
+	}
+}
+
+@media (min-width:1281px) {
+	#bg {
+		height: 100vh;
+        width: 100%;
+        object-fit: fill;
+        position: absolute;
+	}
+}
 /* Media Query for Mobile Devices */
 @media (min-width:320px) {
    #bg {
