--- a/assets/css/main-oauth2.css
+++ b/assets/css/main-oauth2.css
@@ -1104,7 +1104,7 @@ input, select, textarea {
    display:block;
    position: fixed;
    top: 50%;
-   left: 50%;
+   left: 70%;
    min-width: 100%;
    min-height: 100%;
    width: auto;
@@ -1115,12 +1115,12 @@ input, select, textarea {
 }
 
 /* Media Query for Mobile Devices */
-@media (max-width: 30em) {
+@media (min-width:320px) {
    #bg {
    display:block;
    position: fixed;
    top: 50%;
-   left: 80%;
+   left: 70%;
    min-width: 100%;
    min-height: 100%;
    width: auto;
@@ -1131,13 +1131,13 @@ input, select, textarea {
    }
 }
 
-/* Media Query for low resolution  Tablets, Ipads */
-@media (min-width: 30em) and (max-width: 50em) {
+/* Media Query for portrait tablets, portrait iPad */
+@media (min-width:641px) {
    #bg {
    display:block;
    position: fixed;
    top: 50%;
-   left: 50%;
+   left: 70%;
    min-width: 100%;
    min-height: 100%;
    width: auto;
@@ -1148,13 +1148,13 @@ input, select, textarea {
    }
 }
 
-/* Media Query for Tablets Ipads portrait mode */
-@media (min-width: 48em) and (max-width: 64em) {
+/* Media Query for tablet, landscape iPad, lo-res laptops ands desktops*/
+@media (min-width:961px) {
    #bg {
    display:block;
    position: fixed;
    top: 50%;
-   left: 60%;
+   left: 70%;
    min-width: 100%;
    min-height: 100%;
    width: auto;
