--- a/assets/css/main-oauth2.css
+++ b/assets/css/main-oauth2.css
@@ -134,9 +134,9 @@ input, select, textarea {
 		}
 
 	body, input, select, textarea {
-		color: #ffffff;
+		color: #e02b20;
 		font-family: "Source Sans Pro", sans-serif;
-		font-weight: 300;
+		font-weight: 600;
 		font-size: 1rem;
 		line-height: 1.65;
 	}
@@ -169,8 +169,8 @@ input, select, textarea {
 	}
 
 	h1, h2, h3, h4, h5, h6 {
-		color: #ffffff;
-		font-weight: 600;
+		color: #000000;
+		font-weight: 900;
 		line-height: 1.5;
 		margin: 0 0 1rem 0;
 		text-transform: uppercase;
@@ -369,7 +369,7 @@ input, select, textarea {
 		}
 
 	label {
-		color: #ffffff;
+		color: #000000;
 		display: block;
 		font-size: 0.8rem;
 		font-weight: 300;
@@ -907,6 +907,7 @@ input, select, textarea {
 			ul.icons li a {
 				border-radius: 100%;
 				box-shadow: inset 0 0 0 1px #ffffff;
+				background-color: #000000;
 				display: inline-block;
 				height: 2.25rem;
 				line-height: 2.25rem;
@@ -1030,7 +1031,7 @@ input, select, textarea {
 		input[type="button"]:hover,
 		button:hover,
 		.button:hover {
-			background-color: rgba(255, 255, 255, 0.075);
+			background-color: #e02b20;
 		}
 
 		input[type="submit"]:active,
