--- a/assets/css/main-premium.css
+++ b/assets/css/main-premium.css
@@ -134,9 +134,9 @@ input, select, textarea {
 		}
 
 	body, input, select, textarea {
-		color: #ffffff;
+		color: #e02b20;
 		font-family: "Source Sans Pro", sans-serif;
-		font-weight: 300;
+		font-weight: 600;
 		font-size: 1rem;
 		line-height: 1.65;
 	}
@@ -369,7 +369,7 @@ input, select, textarea {
 		}
 
 	label {
-		color: #ffffff;
+		color: #000000;
 		display: block;
 		font-size: 0.8rem;
 		font-weight: 300;
@@ -908,6 +908,7 @@ input, select, textarea {
 				border-radius: 100%;
 				box-shadow: inset 0 0 0 1px #ffffff;
 				display: inline-block;
+				background-color: #000000;
 				height: 2.25rem;
 				line-height: 2.25rem;
 				text-align: center;
@@ -1030,7 +1031,7 @@ input, select, textarea {
 		input[type="button"]:hover,
 		button:hover,
 		.button:hover {
-			background-color: rgba(255, 255, 255, 0.075);
+			background-color: #e02b20;
 		}
 
 		input[type="submit"]:active,
