--- a/assets/css/main-oauth2.css
+++ b/assets/css/main-oauth2.css
@@ -170,7 +170,7 @@ input, select, textarea {
 
 	h1, h2, h3, h4, h5, h6 {
 		color: #000000;
-		font-weight: 900;
+		font-weight: 900:bold;
 		line-height: 1.5;
 		margin: 0 0 1rem 0;
 		text-transform: uppercase;
@@ -372,7 +372,7 @@ input, select, textarea {
 		color: #000000;
 		display: block;
 		font-size: 0.8rem;
-		font-weight: 300;
+		font-weight: 600;
 		letter-spacing: 0.2rem;
 		line-height: 1.5;
 		margin: 0 0 1rem 0;
@@ -1009,6 +1009,7 @@ input, select, textarea {
 		background-color: transparent;
 		border-radius: 4px;
 		border: 0;
+		border-color: ##e02b20;
 		box-shadow: inset 0 0 0 1px #ffffff;
 		color: #ffffff !important;
 		cursor: pointer;
