--- a/assets/css/main-premium.css
+++ b/assets/css/main-premium.css
@@ -372,7 +372,7 @@ input, select, textarea {
 		color: #000000;
 		display: block;
 		font-size: 0.8rem;
-		font-weight: 300;
+		font-weight: 900:bold;
 		letter-spacing: 0.2rem;
 		line-height: 1.5;
 		margin: 0 0 1rem 0;
@@ -1009,8 +1009,9 @@ input, select, textarea {
 		background-color: transparent;
 		border-radius: 4px;
 		border: 0;
+		border-color: ##e02b20;
 		box-shadow: inset 0 0 0 1px #ffffff;
-		color: #ffffff !important;
+		color: #0000000 !important;
 		cursor: pointer;
 		display: inline-block;
 		font-size: 0.8rem;
