--- a/assets/css/main-oauth2.css
+++ b/assets/css/main-oauth2.css
@@ -170,7 +170,7 @@ input, select, textarea {
 
 	h1, h2, h3, h4, h5, h6 {
 		color: #000000;
-		font-weight: 900:bold;
+		font-weight: 900;
 		line-height: 1.5;
 		margin: 0 0 1rem 0;
 		text-transform: uppercase;
@@ -193,6 +193,7 @@ input, select, textarea {
 		}
 
 	h1 {
+		font-weight: 900;
 		font-size: 2.25rem;
 		line-height: 1.3;
 		letter-spacing: 0.5rem;
@@ -223,6 +224,7 @@ input, select, textarea {
 	@media screen and (max-width: 736px) {
 
 		h1 {
+			font-weight: 900;
 			font-size: 1.75rem;
 			line-height: 1.4;
 		}
