--- a/assets/css/main-premium.css
+++ b/assets/css/main-premium.css
@@ -193,6 +193,7 @@ input, select, textarea {
 		}
 
 	h1 {
+		font-weight: 900;
 		font-size: 2.25rem;
 		line-height: 1.3;
 		letter-spacing: 0.5rem;
@@ -223,6 +224,7 @@ input, select, textarea {
 	@media screen and (max-width: 736px) {
 
 		h1 {
+			font-weight: 900;
 			font-size: 1.75rem;
 			line-height: 1.4;
 		}
