--- a/assets/css/main-oauth2.css
+++ b/assets/css/main-oauth2.css
@@ -170,6 +170,7 @@ input, select, textarea {
 
 	h1, h2, h3, h4, h5, h6 {
 		color: #000000;
+		font-family: "Source Sans Pro";
 		font-weight: 900;
 		line-height: 1.5;
 		margin: 0 0 1rem 0;
@@ -193,6 +194,7 @@ input, select, textarea {
 		}
 
 	h1 {
+		font-family: "Source Sans Pro";
 		font-weight: 900;
 		font-size: 2.25rem;
 		line-height: 1.3;
@@ -200,6 +202,7 @@ input, select, textarea {
 	}
 
 	h2 {
+		font-family: "Source Sans Pro";
 		font-size: 1.5rem;
 		line-height: 1.4;
 		letter-spacing: 0.5rem;
