--- a/assets/css/main-premium.css
+++ b/assets/css/main-premium.css
@@ -170,6 +170,7 @@ input, select, textarea {
 
 	h1, h2, h3, h4, h5, h6 {
 		color: #ffffff;
+		font-family: "Source Sans Pro";
 		font-weight: 600;
 		line-height: 1.5;
 		margin: 0 0 1rem 0;
@@ -193,6 +194,7 @@ input, select, textarea {
 		}
 
 	h1 {
+		font-family: "Source Sans Pro";
 		font-weight: 900;
 		font-size: 2.25rem;
 		line-height: 1.3;
@@ -224,6 +226,7 @@ input, select, textarea {
 	@media screen and (max-width: 736px) {
 
 		h1 {
+			font-family: "Source Sans Pro";
 			font-weight: 900;
 			font-size: 1.75rem;
 			line-height: 1.4;
