--- a/assets/css/main-oauth2.css
+++ b/assets/css/main-oauth2.css
@@ -400,7 +400,7 @@ input, select, textarea {
 		transition: border-color 0.2s ease-in-out, box-shadow 0.2s ease-in-out, background-color 0.2s ease-in-out;
 		background-color: transparent;
 		border-radius: 4px;
-		border: solid 1px #ffffff;
+		border: solid 1px #000000;
 		color: inherit;
 		display: block;
 		outline: 0;
@@ -425,7 +425,7 @@ input, select, textarea {
 		select:focus,
 		textarea:focus {
 			background: rgba(255, 255, 255, 0.075);
-			border-color: #ffffff;
+			border-color: #000000;
 			box-shadow: 0 0 0 1px #ffffff;
 		}
 
