--- a/assets/css/main-oauth2.css
+++ b/assets/css/main-oauth2.css
@@ -179,6 +179,8 @@ input, select, textarea {
 	}
 
 		h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
+			font-family: "Source Sans Pro";
+			font-weight: 900;
 			color: inherit;
 			text-decoration: none;
 		}
@@ -227,6 +229,7 @@ input, select, textarea {
 	@media screen and (max-width: 736px) {
 
 		h1 {
+			font-family: "Source Sans Pro";
 			font-weight: 900;
 			font-size: 1.75rem;
 			line-height: 1.4;
