--- a/assets/css/main-premium.css
+++ b/assets/css/main-premium.css
@@ -169,7 +169,7 @@ input, select, textarea {
 	}
 
 	h1, h2, h3, h4, h5, h6 {
-		color: #ffffff;
+		color: #000000;
 		font-family: "Source Sans Pro";
 		font-weight: 600;
 		line-height: 1.5;
@@ -179,11 +179,15 @@ input, select, textarea {
 	}
 
 		h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
+			font-family: "Source Sans Pro";
+			font-weight: 900;
 			color: inherit;
 			text-decoration: none;
 		}
 
 		h1.major, h2.major, h3.major, h4.major, h5.major, h6.major {
+			font-family: "Source Sans Pro";
+			font-weight: 900;
 			border-bottom: solid 1px #ffffff;
 			width: -moz-max-content;
 			width: -webkit-max-content;
