--- a/assets/css/main-oauth2.css
+++ b/assets/css/main-oauth2.css
@@ -904,6 +904,7 @@ input, select, textarea {
 	}
 
 		ul.icons li {
+			border-color: #e02b20;
 			display: inline-block;
 			padding: 0 0.75em 0 0;
 		}
@@ -915,7 +916,8 @@ input, select, textarea {
 			ul.icons li a {
 				border-radius: 100%;
 				box-shadow: inset 0 0 0 1px #ffffff;
-				background-color: #000000;
+				background-color: transparent;
+				border-color: #e02b20;
 				display: inline-block;
 				height: 2.25rem;
 				line-height: 2.25rem;
