--- a/assets/css/main-premium.css
+++ b/assets/css/main-premium.css
@@ -905,6 +905,7 @@ input, select, textarea {
 	}
 
 		ul.icons li {
+			border-color: #e02b20;
 			display: inline-block;
 			padding: 0 0.75em 0 0;
 		}
@@ -917,7 +918,8 @@ input, select, textarea {
 				border-radius: 100%;
 				box-shadow: inset 0 0 0 1px #ffffff;
 				display: inline-block;
-				background-color: #000000;
+				background-color: transparent;
+				border-color: #e02b20;
 				height: 2.25rem;
 				line-height: 2.25rem;
 				text-align: center;
