--- a/assets/css/main-premium.css
+++ b/assets/css/main-premium.css
@@ -429,7 +429,7 @@ input, select, textarea {
 		select:focus,
 		textarea:focus {
 			background: rgba(255, 255, 255, 0.075);
-			border-color: #000000;
+			border-color: #e02b20;
 			box-shadow: 0 0 0 1px #ffffff;
 		}
 
@@ -899,6 +899,7 @@ input, select, textarea {
 /* Icons */
 
 	ul.icons {
+		border-color: #e02b20;
 		cursor: default;
 		list-style: none;
 		padding-left: 0;
