--- a/assets/css/main-oauth2.css
+++ b/assets/css/main-oauth2.css
@@ -427,9 +427,9 @@ input, select, textarea {
 		input[type="tel"]:focus,
 		select:focus,
 		textarea:focus {
-			background: rgba(255, 255, 255, 0.075);
+			background: #e02b20;
 			border-color: #e02b20;
-			box-shadow: 0 0 0 1px #ffffff;
+			box-shadow: 0 0 0 1px #e02b20;
 		}
 
 	select {
