--- a/assets/css/main-oauth2.css
+++ b/assets/css/main-oauth2.css
@@ -1021,8 +1021,8 @@ input, select, textarea {
 		border-radius: 4px;
 		border: 0;
 		border-color: ##e02b20;
-		box-shadow: inset 0 0 0 1px #ffffff;
-		color: #ffffff !important;
+		box-shadow: inset 0 0 0 1px #e02b20;
+		color: #e02b20 !important;
 		cursor: pointer;
 		display: inline-block;
 		font-size: 0.8rem;
@@ -1085,10 +1085,9 @@ input, select, textarea {
 		input[type="button"].primary,
 		button.primary,
 		.button.primary {
-			border-color: ##e02b20;
 			background-color: #ffffff;
 			color: #1b1f22 !important;
-			font-weight: 900;
+			font-weight: 600;
 		}
 
 		input[type="submit"].disabled, input[type="submit"]:disabled,
