--- a/assets/css/main-premium.css
+++ b/assets/css/main-premium.css
@@ -1022,8 +1022,8 @@ input, select, textarea {
 		border-radius: 4px;
 		border: 0;
 		border-color: ##e02b20;
-		box-shadow: inset 0 0 0 1px #ffffff;
-		color: #0000000 !important;
+		box-shadow: inset 0 0 0 1px #e02b20;
+		color: #e02b20 !important;
 		cursor: pointer;
 		display: inline-block;
 		font-size: 0.8rem;
