--- a/assets/css/main-premium.css
+++ b/assets/css/main-premium.css
@@ -134,9 +134,9 @@ input, select, textarea {
 		}
 
 	body, input, select, textarea {
-		color: #e02b20;
+		color: #ffffff;
 		font-family: "Source Sans Pro", sans-serif;
-		font-weight: 600;
+		font-weight: 300;
 		font-size: 1rem;
 		line-height: 1.65;
 	}
@@ -169,8 +169,7 @@ input, select, textarea {
 	}
 
 	h1, h2, h3, h4, h5, h6 {
-		color: #000000;
-		font-family: "Source Sans Pro";
+		color: #ffffff;
 		font-weight: 600;
 		line-height: 1.5;
 		margin: 0 0 1rem 0;
@@ -179,15 +178,11 @@ input, select, textarea {
 	}
 
 		h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
-			font-family: "Source Sans Pro";
-			font-weight: 900;
 			color: inherit;
 			text-decoration: none;
 		}
 
 		h1.major, h2.major, h3.major, h4.major, h5.major, h6.major {
-			font-family: "Source Sans Pro";
-			font-weight: 900;
 			border-bottom: solid 1px #ffffff;
 			width: -moz-max-content;
 			width: -webkit-max-content;
@@ -198,8 +193,6 @@ input, select, textarea {
 		}
 
 	h1 {
-		font-family: "Source Sans Pro";
-		font-weight: 900;
 		font-size: 2.25rem;
 		line-height: 1.3;
 		letter-spacing: 0.5rem;
@@ -230,8 +223,6 @@ input, select, textarea {
 	@media screen and (max-width: 736px) {
 
 		h1 {
-			font-family: "Source Sans Pro";
-			font-weight: 900;
 			font-size: 1.75rem;
 			line-height: 1.4;
 		}
@@ -378,10 +369,10 @@ input, select, textarea {
 		}
 
 	label {
-		color: #000000;
+		color: #ffffff;
 		display: block;
 		font-size: 0.8rem;
-		font-weight: 900:bold;
+		font-weight: 300;
 		letter-spacing: 0.2rem;
 		line-height: 1.5;
 		margin: 0 0 1rem 0;
@@ -404,7 +395,7 @@ input, select, textarea {
 		transition: border-color 0.2s ease-in-out, box-shadow 0.2s ease-in-out, background-color 0.2s ease-in-out;
 		background-color: transparent;
 		border-radius: 4px;
-		border: solid 1px #e02b20;
+		border: solid 1px #ffffff;
 		color: inherit;
 		display: block;
 		outline: 0;
@@ -429,8 +420,8 @@ input, select, textarea {
 		select:focus,
 		textarea:focus {
 			background: rgba(255, 255, 255, 0.075);
-			border-color: #e02b20;
-			box-shadow: 0 0 0 1px #e02b20;
+			border-color: #ffffff;
+			box-shadow: 0 0 0 1px #ffffff;
 		}
 
 	select {
@@ -899,14 +890,12 @@ input, select, textarea {
 /* Icons */
 
 	ul.icons {
-		border-color: #e02b20;
 		cursor: default;
 		list-style: none;
 		padding-left: 0;
 	}
 
 		ul.icons li {
-			border-color: #e02b20;
 			display: inline-block;
 			padding: 0 0.75em 0 0;
 		}
@@ -919,8 +908,6 @@ input, select, textarea {
 				border-radius: 100%;
 				box-shadow: inset 0 0 0 1px #ffffff;
 				display: inline-block;
-				background-color: transparent;
-				border-color: #e02b20;
 				height: 2.25rem;
 				line-height: 2.25rem;
 				text-align: center;
@@ -1021,9 +1008,8 @@ input, select, textarea {
 		background-color: transparent;
 		border-radius: 4px;
 		border: 0;
-		border-color: ##e02b20;
-		box-shadow: inset 0 0 0 1px #e02b20;
-		color: #e02b20 !important;
+		box-shadow: inset 0 0 0 1px #ffffff;
+		color: #ffffff !important;
 		cursor: pointer;
 		display: inline-block;
 		font-size: 0.8rem;
@@ -1044,7 +1030,7 @@ input, select, textarea {
 		input[type="button"]:hover,
 		button:hover,
 		.button:hover {
-			background-color: #e02b20;
+			background-color: rgba(255, 255, 255, 0.075);
 		}
 
 		input[type="submit"]:active,
@@ -1086,10 +1072,9 @@ input, select, textarea {
 		input[type="button"].primary,
 		button.primary,
 		.button.primary {
-			border-color: ##e02b20;
 			background-color: #ffffff;
 			color: #1b1f22 !important;
-			font-weight: 900;
+			font-weight: 600;
 		}
 
 		input[type="submit"].disabled, input[type="submit"]:disabled,
