--- a/assets/css/main-oauth2.css
+++ b/assets/css/main-oauth2.css
@@ -1022,7 +1022,7 @@ input, select, textarea {
 		border: 0;
 		border-color: ##e02b20;
 		box-shadow: inset 0 0 0 1px #e02b20;
-		color: #e02b20 !important;
+		color: #000000 !important;
 		cursor: pointer;
 		display: inline-block;
 		font-size: 0.8rem;
