--- a/assets/css/main-oauth2.css
+++ b/assets/css/main-oauth2.css
@@ -1017,7 +1017,7 @@ input, select, textarea {
 		-webkit-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
 		-ms-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
 		transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
-		background-color: transparent;
+		background-color: #000000;
 		border-radius: 4px;
 		border: 0;
 		border-color: ##e02b20;
