--- a/assets/css/main-oauth2.css
+++ b/assets/css/main-oauth2.css
@@ -1043,7 +1043,7 @@ input, select, textarea {
 		input[type="button"]:hover,
 		button:hover,
 		.button:hover {
-			background-color: #e02b20;
+			background-color: #000000;
 		}
 
 		input[type="submit"]:active,
