--- a/assets/css/main-oauth2.css
+++ b/assets/css/main-oauth2.css
@@ -377,10 +377,10 @@ input, select, textarea {
 		}
 
 	label {
-		color: #000000;
+		color: #e02b20;
 		display: block;
 		font-size: 0.8rem;
-		font-weight: 600;
+		font-weight: 900;
 		letter-spacing: 0.2rem;
 		line-height: 1.5;
 		margin: 0 0 1rem 0;
@@ -606,6 +606,8 @@ input, select, textarea {
 		text-decoration: none;
 		border-bottom: none;
 		position: relative;
+		border-color: ##e02b20;
+		box-shadow: inset 0 0 0 1px #e02b20;
 	}
 
 		.icon:before {
@@ -1044,6 +1046,7 @@ input, select, textarea {
 		button:hover,
 		.button:hover {
 			background-color: #000000;
+			box-shadow: inset 0 0 0 1px #000000;
 		}
 
 		input[type="submit"]:active,
