--- a/assets/css/main-oauth2.css
+++ b/assets/css/main-oauth2.css
@@ -898,16 +898,13 @@ input, select, textarea {
 /* Icons */
 
 	ul.icons {
-		border-color: ##e02b20;
-		box-shadow: inset 0 0 0 1px #e02b20;
+		border-color: #e02b20;
 		cursor: default;
 		list-style: none;
 		padding-left: 0;
 	}
 
 		ul.icons li {
-			border-color: ##e02b20;
-			box-shadow: inset 0 0 0 1px #e02b20;
 			display: inline-block;
 			padding: 0 0.75em 0 0;
 		}
@@ -918,9 +915,8 @@ input, select, textarea {
 
 			ul.icons li a {
 				border-radius: 100%;
-				box-shadow: inset 0 0 0 1px #ffffff;
-				background-color: transparent;
-				border-color: #e02b20;
+				box-shadow: inset 0 0 0 1px #e02b20;
+				background-color: #000000;
 				display: inline-block;
 				height: 2.25rem;
 				line-height: 2.25rem;
