--- a/assets/css/main-oauth2.css
+++ b/assets/css/main-oauth2.css
@@ -377,7 +377,7 @@ input, select, textarea {
 		}
 
 	label {
-		color: #e02b20;
+		color: #ffffff;
 		display: block;
 		font-size: 0.8rem;
 		font-weight: 900;
