--- a/assets/css/main-premium.css
+++ b/assets/css/main-premium.css
@@ -169,8 +169,9 @@ input, select, textarea {
 	}
 
 	h1, h2, h3, h4, h5, h6 {
-		color: #ffffff;
-		font-weight: 600;
+		color: #000000;
+		font-family: "Source Sans Pro";
+		font-weight: 900;
 		line-height: 1.5;
 		margin: 0 0 1rem 0;
 		text-transform: uppercase;
@@ -223,6 +224,7 @@ input, select, textarea {
 	@media screen and (max-width: 736px) {
 
 		h1 {
+
 			font-size: 1.75rem;
 			line-height: 1.4;
 		}
@@ -395,7 +397,7 @@ input, select, textarea {
 		transition: border-color 0.2s ease-in-out, box-shadow 0.2s ease-in-out, background-color 0.2s ease-in-out;
 		background-color: transparent;
 		border-radius: 4px;
-		border: solid 1px #ffffff;
+		border: solid 1px #e02b20;
 		color: inherit;
 		display: block;
 		outline: 0;
@@ -1008,8 +1010,8 @@ input, select, textarea {
 		background-color: transparent;
 		border-radius: 4px;
 		border: 0;
-		box-shadow: inset 0 0 0 1px #ffffff;
-		color: #ffffff !important;
+		box-shadow: inset 0 0 0 1px #e02b20;
+		color: #000000 !important;
 		cursor: pointer;
 		display: inline-block;
 		font-size: 0.8rem;
