--- a/assets/css/main-premium.css
+++ b/assets/css/main-premium.css
@@ -892,6 +892,7 @@ input, select, textarea {
 /* Icons */
 
 	ul.icons {
+		border-color: #e02b20;
 		cursor: default;
 		list-style: none;
 		padding-left: 0;
@@ -908,7 +909,8 @@ input, select, textarea {
 
 			ul.icons li a {
 				border-radius: 100%;
-				box-shadow: inset 0 0 0 1px #ffffff;
+				box-shadow: inset 0 0 0 1px #e02b20;
+				background-color: #000000;
 				display: inline-block;
 				height: 2.25rem;
 				line-height: 2.25rem;
@@ -1032,7 +1034,7 @@ input, select, textarea {
 		input[type="button"]:hover,
 		button:hover,
 		.button:hover {
-			background-color: rgba(255, 255, 255, 0.075);
+			background-color: #e02b20;
 		}
 
 		input[type="submit"]:active,
