--- a/assets/css/main-premium.css
+++ b/assets/css/main-premium.css
@@ -165,11 +165,12 @@ input, select, textarea {
 	}
 
 	p {
+		color: #e02b20;
 		margin: 0 0 2rem 0;
 	}
 
 	h1, h2, h3, h4, h5, h6 {
-		color: #000000;
+		color: #ffffff;
 		font-family: "Source Sans Pro";
 		font-weight: 900;
 		line-height: 1.5;
@@ -194,12 +195,14 @@ input, select, textarea {
 		}
 
 	h1 {
+		color: #000000;
 		font-size: 2.25rem;
 		line-height: 1.3;
 		letter-spacing: 0.5rem;
 	}
 
 	h2 {
+		color: #e02b20;
 		font-size: 1.5rem;
 		line-height: 1.4;
 		letter-spacing: 0.5rem;
@@ -434,10 +437,13 @@ input, select, textarea {
 		height: 2.75rem;
 		padding-right: 2.75rem;
 		text-overflow: ellipsis;
+		color: #e02b20;
+		font-weight: 900;
 	}
 
 		select option {
-			color: #ffffff;
+			color: #e02b20;
+			font-weight: 900;
 			background: #1b1f22;
 		}
 
@@ -1017,7 +1023,7 @@ input, select, textarea {
 		cursor: pointer;
 		display: inline-block;
 		font-size: 0.8rem;
-		font-weight: 300;
+		font-weight: 900;
 		height: 2.75rem;
 		letter-spacing: 0.2rem;
 		line-height: 2.75rem;
@@ -1108,7 +1114,7 @@ input, select, textarea {
    display:block;
    position: fixed;
    top: 50%;
-   left: 70%;
+   left: 40%;
    min-width: 100%;
    min-height: 100%;
    width: auto;
