--- a/assets/css/main-oauth2.css
+++ b/assets/css/main-oauth2.css
@@ -1042,6 +1042,7 @@ input, select, textarea {
 		button:hover,
 		.button:hover {
 			background-color: #000000;
+			color: #ffffff;
 			box-shadow: inset 0 0 0 1px #000000;
 		}
 
