--- a/assets/css/main-premium.css
+++ b/assets/css/main-premium.css
@@ -1015,15 +1015,16 @@ input, select, textarea {
 		-webkit-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
 		-ms-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
 		transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
-		background-color: transparent;
+		background-color: #000000;
 		border-radius: 4px;
 		border: 0;
+		border-color: ##e02b20;
 		box-shadow: inset 0 0 0 1px #e02b20;
-		color: #000000 !important;
+		color: #e02b20 !important;
 		cursor: pointer;
 		display: inline-block;
 		font-size: 0.8rem;
-		font-weight: 900;
+		font-weight: 300;
 		height: 2.75rem;
 		letter-spacing: 0.2rem;
 		line-height: 2.75rem;
@@ -1040,7 +1041,9 @@ input, select, textarea {
 		input[type="button"]:hover,
 		button:hover,
 		.button:hover {
-			background-color: #e02b20;
+			background-color: #000000;
+			color: #ffffff;
+			box-shadow: inset 0 0 0 1px #000000;
 		}
 
 		input[type="submit"]:active,
