--- a/assets/css/main-premium.css
+++ b/assets/css/main-premium.css
@@ -134,9 +134,9 @@ input, select, textarea {
 		}
 
 	body, input, select, textarea {
-		color: #ffffff;
+		color: #e02b20;
 		font-family: "Source Sans Pro", sans-serif;
-		font-weight: 300;
+		font-weight: 600;
 		font-size: 1rem;
 		line-height: 1.65;
 	}
