--- a/assets/css/main-premium.css
+++ b/assets/css/main-premium.css
@@ -171,7 +171,7 @@ input, select, textarea {
 	}
 
 	h1, h2, h3, h4, h5, h6 {
-		color: #ffffff;
+		color: #e02b20;
 		font-family: "Source Sans Pro";
 		font-weight: 900;
 		line-height: 1.5;
