--- a/assets/css/main-oauth2.css
+++ b/assets/css/main-oauth2.css
@@ -1090,6 +1090,16 @@ input, select, textarea {
 			color: #1b1f22 !important;
 			font-weight: 600;
 		}
+		input[type="submit"].primary,
+		input[type="reset"].primary,
+		input[type="button"].primary,
+		button.primary:hover,
+		.button.primary:hover {
+			background-color: #000000;
+			color: #ffffff;
+			font-weight: 600;
+			box-shadow: inset 0 0 0 1px #000000;
+		}
 
 		input[type="submit"].disabled, input[type="submit"]:disabled,
 		input[type="reset"].disabled,
