--- a/assets/css/main-oauth2.css
+++ b/assets/css/main-oauth2.css
@@ -101,7 +101,7 @@ input, select, textarea {
 			-webkit-transition: none !important;
 			-ms-transition: none !important;
 			transition: none !important;
-			color: #e02b20;
+			background-color: #e02b20;
 		}
 
 /* Type */
