--- a/assets/css/main-oauth2.css
+++ b/assets/css/main-oauth2.css
@@ -1089,9 +1089,10 @@ input, select, textarea {
 			color: #1b1f22 !important;
 			font-weight: 600;
 		}
-		input[type="submit"].primary,
-		input[type="reset"].primary,
-		input[type="button"].primary,
+
+		input[type="submit"].primary:hover,
+		input[type="reset"].primary:hover,
+		input[type="button"].primary:hover,
 		button.primary:hover,
 		.button.primary:hover {
 			background-color: #000000;
