--- a/assets/css/main-premium.css
+++ b/assets/css/main-premium.css
@@ -1092,9 +1092,9 @@ input, select, textarea {
 			font-weight: 600;
 		}
 
-		input[type="submit"].primary,
-		input[type="reset"].primary,
-		input[type="button"].primary,
+		input[type="submit"].primary:hover,
+		input[type="reset"].primary:hover,
+		input[type="button"].primary:hover,
 		button.primary:hover,
 		.button.primary:hover {
 			background-color: #000000;
