--- a/assets/css/noscript.css
+++ b/assets/css/noscript.css
@@ -2,6 +2,7 @@
 
 	body.is-preload #bg:before {
 		background-color: transparent;
+		color: #1b1f22;
 	}
 
 /* Header */
@@ -16,12 +17,14 @@
 
 		body.is-preload #header > * {
 			opacity: 1;
+			color: #1b1f22;
 		}
 
 		body.is-preload #header .content .inner {
 			max-height: none;
 			padding: 3rem 2rem;
 			opacity: 1;
+			color: #1b1f22;
 		}
 
 /* Main */
@@ -29,4 +32,5 @@
 	#main article {
 		opacity: 1;
 		margin: 4rem 0 0 0;
+		color: #1b1f22;
 	}
